--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music player</title>
     <link rel="shortcut icon" href="#" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
-        integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
-        crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
-
 </head>
 
 <body>
@@ -67,6 +66,18 @@
         <div class="playlist">
 
         </div>
+    </div>
+    <div class="toast-container content">
+    </div>
+
+    <div class="content content-btn">
+        <div onclick="showSuccessToast()" class="btn-toast btn--success">Show success toast</div>
+        <div onclick="showErrorToast()" class=" btn-toast btn--danger">Show error toast</div>
+        <div onclick="showWarningToast()" class=" btn-toast btn--warn">Show warning toast</div>
+        <div onclick="showInfoToast()" class=" btn-toast btn--info">Show info toast</div>
+    </div>
+    <div class="c">
+        <!-- <p style="font-weight: 700;">aa</p> -->
     </div>
 
     <!-- Design from: https://static.collectui.com/shots/3671744/musicloud-revolutionary-app-for-music-streaming-large -->
